--- a/README
+++ b/README
@@ -1,1 +1,14 @@
+This is a webscraper to fetch and watch flight ticket prices move during a period of time 
 
+#README
+#needed:
+#getData Function
+#putDatainCSV Function
+#Variable: Timeout
+#Some kind of output/Log what the programm is doing right now and when it'll
+#fetch Data again.
+#Then I can just do the whole program like this:
+#getData() "Price right now is..." "Already passed to {Dateiname}.csv
+#Next fetch in XY Minutes @13:23"...
+#I should also consider using a VPN or a Proxy that is rotating IP adresses
+#Bet there's a plugin for that...
